[project]
name = "gruyere"
dynamic = ["version"]
description = "A tiny program for viewing and killing processes on ports"
readme = "README.md"
authors = [
    { name = "Savannah Ostrowski", email = "savannah@python.org" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.1.2",
    "readchar>=4.2.1",
    "rich>=14.2.0",
    "typer>=0.15.1",
]
keywords = ["ports", "processes", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/savannahostrowski/gruyere"
Repository = "https://github.com/savannahostrowski/gruyere"
Issues = "https://github.com/savannahostrowski/gruyere/issues"

[project.scripts]
gruyere = "gruyere.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
# Only include the gruyere package
packages = ["gruyere"]

[tool.hatchling.build.targets.sdist]
exclude = [
    "/.python-version",
    "/uv.lock",
]

[tool.hatch.version]
path = "gruyere/__init__.py"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "types-psutil>=7.0.0.20251001",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I"]  # Enable isort rules for import sorting

[tool.pyright]
include = ["gruyere"]
typeCheckingMode = "strict"
pythonVersion = "3.13"
